--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,10 @@
 
 # dependencies
 /node_modules
+package-lock.json
 
 # profiling files
-chrome-profiler-events.json
-speed-measure-plugin.json
+chrome-profiler-events*.json
 
 # IDEs and editors
 /.idea
@@ -44,9 +44,3 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
-
-# Environment Variables
-.env
-.env.build
-
-.vercel
